<?xml version="1.0"?>
<package format="3">
  <name>gb_behavior_tree</name>
  <version>0.0.0</version>
  <description>This package lets you to execute a behavior tree, in the same ways as it would be executed inside a PlanSys2 action.</description>
  <maintainer email="fmrico@gmail.com">fmrico</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>behaviortree_cpp_v3</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
